@@ -30,8 +30,8 @@ class yarp::os::impl::PortCoreOutputUnit : public PortCoreUnit {
 public:
     // specifically for managing input connections
 
-    PortCoreOutputUnit(PortCore& owner, OutputProtocol *op) : 
-        PortCoreUnit(owner), op(op), phase(1), activate(0), trackerMutex(1) {
+    PortCoreOutputUnit(PortCore& owner, int index, OutputProtocol *op) : 
+        PortCoreUnit(owner,index), op(op), phase(1), activate(0), trackerMutex(1) {
 
         YARP_ASSERT(op!=NULL);
         closing = false;
