@@ -1,3 +1,9 @@
+2011-05-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/PortCore.cpp: fix race condition
+	when multiple processes try to connect the same two
+	ports [thanks Andrea Del Prete] [thanks Lorenzo Natale]
+
 2011-05-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_OS/include/yarp/os/impl/NameserCarrier.h:
